Fix z-index issues

--- a/src/components/UserAccountWidget/UserAccountWidget.module.scss
+++ b/src/components/UserAccountWidget/UserAccountWidget.module.scss
@@ -4,12 +4,13 @@
     &__link {
         display: grid;
         place-items: center;
+        z-index: 10;
+
         &:link,
         &:visited {
             width: 50px;
             height: 50px;
             border-radius: 50%;
-            transition: box-shadow 0.3s;
 
             @media (max-width: 840px) {
                 width: 32px;
@@ -17,11 +18,20 @@
             }
         }
 
-        &:hover {
-            box-shadow: 0px 0px 0px 2px colors.$accent100 inset;
+        @media (min-width: 841px) {
+            &::after {
+                content: "";
+                width: 50px;
+                height: 50px;
+                border-radius: 50%;
+                position: absolute;
+                box-shadow: 0px 0px 0px 2px colors.$accent100 inset;
+                opacity: 0;
+                transition: 0.3s;
+            }
 
-            @media (max-width: 840px) {
-                box-shadow: unset;
+            &:hover::after {
+                opacity: 1;
             }
         }
     }
@@ -30,7 +40,6 @@
         width: 50px;
         height: 50px;
         object-fit: cover;
-        z-index: -1;
         border-radius: inherit;
 
         @media (max-width: 840px) {
